style: fixed overflow

--- a/assets/styles/index/queries.css
+++ b/assets/styles/index/queries.css
@@ -14,6 +14,10 @@
    }
    
    @media (max-width: 767px) {
+       html,
+       body {
+           overflow-x: hidden;
+       }
        #opening_text {
            font-size: 14px;
            padding-left: 20px;
